# cmake_wxwidgets

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: main.cpp  main.h  mainwindow.cpp  mainwindow.h
